tests/lifetime/loan/multi_loan_conflict_on_b_after_join.sim

        extern fn sink(r: &mut i64);
        fn f(a: i64, b: i64, c: bool) {
          r: &mut i64;
          entry:
            branch(copy c) [true: t, false: fbr]
          t:
            r = &mut a;
            goto merge
          fbr:
            r = &mut b;
            goto merge
          merge:
            b = 2;
            call sink(move r);
            return
        }
        